syntax = "proto3";

package io.github.vinicreis.dht.core.service;

import "io/github/vinicreis/dht/core/service/model/request/found_request.proto";
import "io/github/vinicreis/dht/core/service/model/request/not_found_request.proto";
import "io/github/vinicreis/dht/core/service/model/response/found_response.proto";
import "io/github/vinicreis/dht/core/service/model/response/not_found_response.proto";

service DHTServiceClient {
  rpc found(io.github.vinicreis.dht.core.model.request.FoundRequest) returns (io.github.vinicreis.dht.core.model.response.FoundResponse) { }
  rpc notFound(io.github.vinicreis.dht.core.model.request.NotFoundRequest) returns (io.github.vinicreis.dht.core.model.response.NotFoundResponse) { }
}
